# RandomRaypath

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
config/: client_renderer.toml  client_renderer2.toml  computational_server.toml
shaders/: camera.vert  rainbow.frag
src/: main.cpp  ray.mpp
src/config/: client_renderer.cpp  client_renderer.mpp
src/graphics/engine/: graphical_loop.cpp  graphical_loop.h  scene_logic.cpp  scene_logic.h
src/graphics/engine/logical_system/: logical_text_line.h
src/graphics/rhi/: g_app_driver.h  renderer.cpp  renderer.h  renderer.mpp
src/graphics/rhi/pipeline/: object_2d_pipeline.cpp  object_2d_pipeline.h  pipeline.h  pipeline_manager.cpp  pipeline_manager.h
src/graphics/rhi/pipeline/impl/: glyph_msdf_pipeline.cpp  glyph_msdf_pipeline.h  glyph_pipeline.cpp  rainbow_rect_pipeline.cpp  rainbow_rect_pipeline.h  solid_rect_pipeline.cpp  solid_rect_pipeline.h  text_msdf_pipeline.cpp  text_msdf_pipeline.h
src/graphics/window/: window.cpp  window.h  window.mpp
src/utils/: index_pool.h  ray_time.h
